# opencast-obs-plugin

./: CMakeLists.txt
docs/docs/: index.md
src/: obsOpencastIngestPlugin.cpp  obsOpencastIngestPlugin_version.h.in  utilsAndConfig.hpp
src/moc/: opencastSettings.cpp
